# parsee-core

./: .gitignore  LICENSE  license.txt  pyproject.toml  readme.md
.github/ISSUE_TEMPLATE/: extraction-results-not-good.md
parsee/: __init__.py  settings.py
parsee/chat/: custom_dataclasses.py  main.py
parsee/cloud/: api.py  cloud_file_manager.py  cloud_image_fetcher.py
parsee/converters/: html_extraction.py  image_creation.py  interfaces.py  json_to_raw.py  langchain.py  main.py  pdf_extraction.py  simple_text.py
parsee/datasets/: dataset_dataclasses.py  main.py
parsee/datasets/evaluation/: main.py
parsee/datasets/readers/: disk_reader.py  interfaces.py
parsee/datasets/writers/: disk_writer.py  interfaces.py
parsee/extraction/: extractor_dataclasses.py  extractor_elements.py  final_structuring.py  run.py
parsee/extraction/models/: choose_model.py  helpers.py  model_dataclasses.py  model_loader.py
parsee/extraction/models/llm_models/: anthropic_model.py  chatgpt_model.py  cohere_model.py  llm_base_model.py  mistral_model.py  ollama_model.py  prompts.py  replicate_model.py  structuring_schema.py  together_model.py
parsee/extraction/models/llm_models/model_collection/: anthropic_model.py  chatgpt_model.py  cohere_model.py  google_model.py  mistral_model.py  ollama_model.py  replicate_model.py  together_model.py
parsee/extraction/tasks/element_classification/: element_classifier.py  element_classifier_llm.py  element_model.py  element_model_llm.py  features.py
parsee/extraction/tasks/mappings/: features.py  mapping_classifier.py  mapping_classifier_llm.py  mapping_model.py  mapping_model_llm.py  utils.py
parsee/extraction/tasks/meta_info_structuring/: features.py  meta_info.py  meta_info_llm.py
parsee/extraction/tasks/questions/: features.py  question_classifier.py  question_classifier_llm.py  question_model.py  question_model_llm.py  utils.py
parsee/raw_converters/: html_extraction.py  interfaces.py  json_to_raw.py  main.py  pdf_extraction.py
parsee/storage/: in_memory_storage.py  interfaces.py  local_file_manager.py
parsee/storage/vector_stores/: interfaces.py  no_vectors.py  simple_faiss.py  simple_numpy.py
parsee/templates/: element_schema.py  export_schema.py  general_structuring_schema.py  helpers.py  job_from_json.py  job_template.py  mappings.py
parsee/utils/: constants.py  enums.py  helper.py  merge_strategies.py  sample_items.py  settings.py  tabular.py
tests/fixtures/: MSFT_FY_2007.html
tests/parsee/chat/: test_main.py
tests/parsee/chat/merge/: test_data.py  test_merge.py
tests/parsee/extraction/models/llm_models/: test_llm_base_model.py
tests/parsee/extraction/models/llm_models/model_collection/: test_anthropic_model.py  test_mistral_model.py  test_replicate_model.py
tests/parsee/utils/: test_tabular.py
tutorials/: 0_basic_example.py  10_custom_prompts.py  11_document_chat.py  1_basic_example_meta.py  2_table_extraction.py  3_loading_templates.py  4_saving_templates.py  5_datasets.py  6_model_evaluations.py  7_langchain_integration.py  8_multimodal_models.py  9_loading_images_from_parsee_cloud_for_multimodal_use.py
