[tool.poetry]
name = "parsee-core"
version = "0.1.5.9"
description = ""
authors = ["Parsee.ai <info@parsee.ai>"]
homepage = "https://parsee.ai"
packages = [{include = "parsee"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
requests = "^2.28.1"
pandas = "^1.4.3"
numpy = "^1.23.1"
tiktoken = "^0.4.0"
pydantic = "^2.7.0"
beautifulsoup4 = "^4.11.1"
parsee-pdf-reader = "^0.1.6.0"
lxml = "^4.9.1"
opencv-python = "^4.9.0.80"
torch = "<2.3"
urllib3 = "<2"

# Extras
langchain = "^0.1.11"
faiss-cpu = [{version = "<1.7.1", platform = "darwin", optional = true}, {version = "^1.7.1", platform = "linux", optional = true}]
sentence-transformers = { version="^2.2.2", optional=true }

# Model provider specific
anthropic = { version="^0.20.0", optional=true }
ollama = { version="^0.1.7", optional=true }
together = { version="^1.1.1", optional=true }
openai = { version="^0.27.8", optional=true }
cohere = { version="^5.3.3", optional=true }
mistralai = { version="^1.1.0", optional=true }
replicate = { version="^0.23.1", optional=true }

[tool.poetry.extras]
langchain = ["langchain"]
faiss = ["faiss-cpu", "sentence-transformers"]
openai = ["openai"]
together = ["together"]
anthropic = ["anthropic"]
ollama = ["ollama"]
cohere = ["cohere"]
mistral = ["mistralai"]
replicate = ["replicate"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
