[tool.poetry]
name = "parsee-core"
version = "0.1.6.7"
description = ""
authors = ["Parsee.ai <info@parsee.ai>"]
homepage = "https://parsee.ai"
packages = [{include = "parsee"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
requests = "^2.28.1"
pandas = "^1.4.3"
numpy = "^1.23.1"
tiktoken = "^0.4.0"
pydantic = "^2.7.0"
beautifulsoup4 = "^4.11.1"
parsee-pdf-reader = "^0.1.6.0"
lxml = "^4.9.1"
opencv-python = "^4.9.0.80"
torch = "<2.3"
urllib3 = "<2"
sentence-transformers = "^2.2.2"
scikit-learn = "^1.5.2"
anthropic = "^0.20.0"
ollama = "^0.1.7"
together = "^1.1.1"
openai = "^0.27.8"
cohere = "^5.3.3"
mistralai ="^1.1.0"
replicate ="^0.23.1"
tenacity = "^8.1.0"
pydantic-settings = "^2.6.1"


[tool.poetry.group.extras.dependencies]
langchain = "^0.1.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-env = "^1.1.5"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = "True"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
env_files = [".env"]
env = [
    "max_cache_size=1",
    "retry_attempts=2",
]
